2009-12-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c:
	Repealed original fix for 2818014

	* result.c:
	[ 2900630 ] Allow for instances > chunkSize when chunking enabled
	
2009-12-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 10_interop.mof,default.reg.in,interopProvider.c:
	[ 2908421 ] IndicationProfile: IndicationSubscription - RI props

2009-11-19  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* test/unittest/Makefile.am, test/unittest/genericlist.c
	[ 2859885 ] unittest case for generic list functions

2009-11-18  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* msgQueue.h, msgqueue.c, providerMgr.c, sfcBroker.c, test/TestProviders/cmpiTestAssociationProvider.c
	[ 2532149 ] sfcb: instance ops against non-instance MI report no error

2009-11-18  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* configure.ac, test/TestProviders/cmpiTestInstanceProvider.c
	[ 2859978 ] TestProviders for SFCB (added threading based functions support)

2009-11-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 2727811 ] typeo in fileRepository.c
	(found by Shigeyoshi Hashi)

	* brokerUpc.c:
	[ 2707633 ] sfcb: doesn't advertise capabilities CMPIBrokerFT
	(based on patch by Tyrel Datwyler)
	
2009-11-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* test/stageschema.sh, Makefile.am:
	[ 2893618 ] Improve stageschema.sh

	* objectImpl.c:
	[ 2892739 ] buffer overruns in dataValueToString() 
	(patch by Bart Whitely)
	
2009-11-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 2093567 ] Qualifiers are not returned for REF properties
	(patch by Bart Whitely)

	* test/TestProviders/cmpiTestExecQueryProvider.c, 
	  test/TestProviders/cmpiTestMiscProvider.c:
	[ 2892943 ] Various compiler warnings for TestProviders
	
2009-11-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, test/xmltest/SNS*:
	[ 2863775 ] interopProvider needs SourceNamespaces property
