@@ -1,4 +1,4 @@
-<INSTANCENAME CLASSNAME="CIM_IndicationSubscription">
+<INSTANCENAME CLASSNAME="SFCB_IndicationSubscription">
 <KEYBINDING NAME="Filter">
 <VALUE.REFERENCE>
 <LOCALINSTANCEPATH>
