@@ -8,7 +8,7 @@
           <NAMESPACE NAME="interop"/>
         </LOCALNAMESPACEPATH>
         <IPARAMVALUE NAME="NewInstance">
-          <INSTANCE CLASSNAME="CIM_IndicationSubscription">
+          <INSTANCE CLASSNAME="SFCB_IndicationSubscription">
             <PROPERTY.REFERENCE NAME="Filter" 
                                 REFERENCECLASS="CIM_IndicationFilter"> 
               <VALUE.REFERENCE> 
