@@ -8,7 +8,7 @@
           <NAMESPACE NAME="interop"/>
         </LOCALNAMESPACEPATH>
         <IPARAMVALUE NAME="InstanceName">
-          <INSTANCENAME CLASSNAME="CIM_IndicationSubscription">
+          <INSTANCENAME CLASSNAME="SFCB_IndicationSubscription">
             <KEYBINDING NAME="Filter">
               <VALUE.REFERENCE>
                 <INSTANCENAME CLASSNAME="CIM_IndicationFilter">
